clients-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clients-deployments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clientservice
  template:
    metadata:
      labels:
        app: clientservice
    spec:
      containers:
        - name: clientservice
          image: refweb/clientservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-server
spec:
  type: ClusterIP
  selector:
    app: clientservice
  ports:
    - name: clientservice
      protocol: TCP
      port: 80
      targetPort: 80
